--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </p>
                 <p class="links">
                     <a class="btn" href="index.html" target="_blank" rel="noopener">Trang chủ</a>
-                    <a class="btn" href="gioithieu.html" target="_blank" rel="noopener">Gióit thiệu</a>
+                    <a class="btn" href="gioithieu.html" target="_blank" rel="noopener">Giới thiệu</a>
                 </p>
             </div>
         </div>
