--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     &middot;
                 </p>
                 <p class="links">
-                    <a class="btn" href="index.html" target="_blank" rel="noopener">Trang chủ</a>
-                    <a class="btn" href="gioithieu.html" target="_blank" rel="noopener">Giới thiệu</a>
+                    <a class="btn" href="index.html" target="" rel="noopener">Trang chủ</a>
+                    <a class="btn" href="gioithieu.html" target="" rel="noopener">Giới thiệu</a>
                     <a class="btn" href="" target="_blank" rel="noopener">Demo 1</a>
                 </p>
             </div>
