--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p class="links">
                     <a class="btn" href="index.html"  rel="noopener">Trang chủ</a>
                     <a class="btn" href="gioithieu.html"  rel="noopener">Giới thiệu</a>
-                    <a class="btn" href="" target="_blank" rel="noopener">Demo 1</a>
+                    <a class="btn" href="" rel="noopener">Demo 1</a>
                 </p>
             </div>
         </div>
