--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     &middot;
                 </p>
                 <p class="links">
-                    <a class="btn" href="index.html"  rel="noopener">Trang chủ</a>
-                    <a class="btn" href="gioithieu.html"  rel="noopener">Giới thiệu</a>
-                    <a class="btn" href="" rel="noopener">Demo 1</a>
+                    <a class="btn" href="index.html">Trang chủ</a>
+                    <a class="btn" href="gioithieu.html">Giới thiệu</a>
+                    <a class="btn" href="">Demo 1</a>
                 </p>
             </div>
         </div>
