--- a/gioithieu.html
+++ b/gioithieu.html
@@ -21,8 +21,9 @@
                     &middot;
                 </p>
                 <p class="links">
-                    <a class="btn" href="index.html" target="_blank" rel="noopener">Trang chủ</a>
-                    <a class="btn" href="gioithieu.html" target="_blank" rel="noopener">Giới thiệu</a>
+                    <a class="btn" href="index.html" target="_self" rel="noopener">Trang chủ</a>
+                    <a class="btn" href="gioithieu.html" target="_self" rel="noopener">Giới thiệu</a>
+                    <a class="btn" href="" target="_self">Demo 1</a>
                 </p>
             </div>
         </div>
