--- a/gioithieu.html
+++ b/gioithieu.html
@@ -15,50 +15,35 @@
             <div class="profile-info">
                 <h1 class="name">Phạm Thiên Phú Quý</h1>
                 <p class="meta">
-                    <span>Facebook cá nhân: 
-                        <a href="https://www.facebook.com/quyctvdaihoigioitre2025"> Quý Quý</a>
+                    <span>Youtube cá nhân: 
+                        <a href="https://www.youtube.com/@QuyDHGT2025"> Xem tại đây</a>
                     </span>
                     &middot;
                 </p>
                 <p class="links">
-                    <a class="btn" href="index.html" target="_self" rel="noopener">Trang chủ</a>
-                    <a class="btn" href="gioithieu.html" target="_self" rel="noopener">Giới thiệu</a>
+                    <a class="btn" href="index.html" target="_self">Trang chủ</a>
+                    <a class="btn" href="gioithieu.html" target="_self">Giới thiệu</a>
                 </p>
             </div>
         </div>
     </header>
-
     <main class="main">
         <section class="summary card">
             <h2>Thông tin cá nhân</h2>
             <p>DH52201333, Phạm Thiên Phú Quý</p>
         </section>
-
         <section class="experience card">
             <h2>Thành tích cá nhân</h2>
-
             <div class="item">
                 <h3>Sinh động viên Đại hội Giới Trẻ TGP Sài Gòn 2025 <span class="muted"></span></h3>
-                <div class="period muted">9/9/2025 - hiện tại</div>
+                <div class="period muted">9/9/2025 - 22/11/2025</div>
                 <img class="exp-image" src="./img/background.jpg" width="500" height="500" alt="Sinh động viên Đại hội Giới Trẻ TGP Sài Gòn 2025">
-            </div>
-
-            <div class="item">
-                <h3>Trưởng nhóm môn phát triển phần mềm nguồn mở <span class="muted"></span></h3>
-                <div class="period muted">15/9/2025 - hiện tại</div>
-            </div>
-
-            <div class="item">
-                <h3>Trưởng nhóm môn phân tích thiết kế <span class="muted"></span></h3>
-                <div class="period muted">19/9/2025 - hiện tại</div>
             </div>
         </section>
     </main>
-
     <footer class="footer muted">
         <p>Thiết kế bởi Phạm Thiên Phú Quý</p>
     </footer>
 </div>
-
 </body>
 </html>
